@@ -9,6 +9,13 @@ and this project adheres to `Semantic Versioning <http://semver.org/>`_
 UNRELEASED VERSION
 ------------------
 
+Added
+~~~~~
+
+- Added the `insert_date` and `is_history` properties to XNAT objects (Project, Subject, Experiment, Scan) to
+  allow access to these metadata fields
+- Option to retrieve users per project
+
 Fixed
 ~~~~~
 
